# ai_game

./: .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml
app/: database.py  deps.py  main.py  settings.py
app/middleware/: time.py
app/models/: __init__.py  issue.py  user.py
app/routes/: health.py  issue.py  user.py
app/schemas/: issue.py  user.py
app/services/: email.py  issue.py  user.py
migrations/: env.py
migrations/versions/: 5e715610a90a_adding_the_users_table.py  c9b5c725a3ed_add_confirmed_at_updated_at_remove_phone.py  f340d4717ba1_initial_schema_setup.py
